[gd_scene load_steps=16 format=3 uid="uid://r2xah0tf3cwc"]

[ext_resource type="Script" uid="uid://cfusxwqo5pota" path="res://lib/level/base_level.gd" id="1_learr"]
[ext_resource type="Script" uid="uid://dpq6sqc353ill" path="res://lib/level/controlled_characters.gd" id="2_e6l83"]
[ext_resource type="Script" uid="uid://oyxgwexhwe2t" path="res://lib/level/spawned_npcs.gd" id="2_puehc"]
[ext_resource type="PackedScene" uid="uid://c6221w4o1j0pb" path="res://lib/level/level_camera/level_camera.tscn" id="3_uhyek"]
[ext_resource type="PackedScene" uid="uid://diigdxkxkk1w0" path="res://gui/level_gui/level_gui.tscn" id="4_a34jl"]
[ext_resource type="Texture2D" uid="uid://pvxsmc7larjk" path="res://resources/black_pixel.png" id="5_pomtd"]
[ext_resource type="PackedScene" uid="uid://diqh0dvn36rg7" path="res://rust/src/fow/rusty_fow.tscn" id="5_wsxo2"]
[ext_resource type="Script" uid="uid://bvtubd4icaste" path="res://lib/combat/combat.gd" id="6_j4r05"]
[ext_resource type="Script" uid="uid://dxo7olpuxqkhf" path="res://lib/ability/ability_resolver.gd" id="8_4gvvs"]
[ext_resource type="Shader" uid="uid://dvmhwdg536ntq" path="res://materials/base_lavel_main.gdshader" id="10_3ohhg"]
[ext_resource type="PackedScene" uid="uid://7pg5k26knuwe" path="res://scenes/postprocessing/camera_synced_viewport.tscn" id="11_f80c0"]
[ext_resource type="Script" uid="uid://cdja5kjqy84lx" path="res://gui/drag_drop/drag_drop_host.gd" id="12_tkddu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_putaj"]
render_priority = 0
shader = ExtResource("10_3ohhg")
shader_parameter/outline_mask = ExtResource("5_pomtd")

[sub_resource type="QuadMesh" id="QuadMesh_d2xhp"]
material = SubResource("ShaderMaterial_putaj")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="SphereShape3D" id="SphereShape3D_c1vob"]

[node name="BaseLevel" type="Node3D"]
script = ExtResource("1_learr")

[node name="SpawnedNpcs" type="Node" parent="."]
script = ExtResource("2_puehc")

[node name="ControlledCharacters" type="Node" parent="."]
script = ExtResource("2_e6l83")

[node name="Screen" type="MeshInstance3D" parent="."]
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_d2xhp")

[node name="RustyFow" parent="." instance=ExtResource("5_wsxo2")]
bounds = AABB(0, 0, 0, 64, 64, 0)

[node name="LevelGui" parent="." instance=ExtResource("4_a34jl")]

[node name="Combat" type="Node" parent="."]
script = ExtResource("6_j4r05")

[node name="AbilityResolver" type="Node" parent="."]
script = ExtResource("8_4gvvs")

[node name="Area3D" type="Area3D" parent="AbilityResolver"]
collision_layer = 0
input_ray_pickable = false
monitorable = false

[node name="Area3DSphere" type="CollisionShape3D" parent="AbilityResolver/Area3D"]
shape = SubResource("SphereShape3D_c1vob")

[node name="LevelCamera" parent="." instance=ExtResource("3_uhyek")]
cull_mask = 1048563

[node name="OutlineViewport" parent="." instance=ExtResource("11_f80c0")]
render_scale = 0.4

[node name="DragDropHost" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0
script = ExtResource("12_tkddu")
